--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,6 +13,8 @@
       font-family: Arial, Helvetica, sans-serif
     }
   </style>
+  <!-- entry point of client-side of the app-->
+  <script src="app.ts"></script>
 </head>
 
 <body>
