Added logger module and service

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -35,6 +35,10 @@
             id="test-register">
       test register
     </button>
+      <a type="button"
+         href="test">
+        go to test page
+      </a>
   </div>
 </body>
 
