--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <div id="game"></div>
   <h3>
     Testing client-page
   </h3>
@@ -35,10 +36,10 @@
             id="test-register">
       test register
     </button>
-      <a type="button"
-         href="test">
-        go to test page
-      </a>
+    <a type="button"
+       href="test">
+      go to test page
+    </a>
   </div>
 </body>
 
